doomemacs: format buffer with (SPC c f)

--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -78,3 +78,9 @@ Automatically refresh the status buffer when new changes are saved
 (with-eval-after-load 'magit-mode
   (add-hook 'after-save-hook 'magit-after-save-refresh-status t))
 #+end_src
+** LSP
+Format buffer with (SPC c f)
+#+begin_src emacs-lisp
+(map! :leader
+      :desc "Format buffer" "c f" #'lsp-format-buffer)
+#+end_src
