Format buffer keybind only un Normal mode

--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -99,5 +99,5 @@ Automatically refresh the status buffer when new changes are saved
 Format buffer with (SPC c f)
 #+begin_src emacs-lisp
 (map! :leader
-      :desc "Format buffer" "c f" #'lsp-format-buffer)
+      :desc "Format buffer" :n "c f" #'lsp-format-buffer)
 #+end_src
