--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -106,3 +106,17 @@ Format buffer with (SPC c f)
 (map! :leader
       :desc "Format buffer" :n "c f" #'lsp-format-buffer)
 #+end_src
+
+Add custom Terraform language server
+#+begin_src elisp
+(use-package! lsp-mode
+  :config
+
+  (lsp-register-client
+   (make-lsp-client :new-connection (lsp-stdio-connection '("/usr/bin/terraform-ls" "serve"))
+                    :major-modes '(terraform-mode)
+                    :server-id 'terraform-ls))
+
+  (add-hook 'terraform-mode-hook #'lsp)
+)
+#+end_src
