emacs: add haskell formatting

--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -130,6 +130,13 @@ Format buffer with (SPC c f)
       :desc "Format buffer" :n "c f" #'lsp-format-buffer)
 #+end_src
 
+*** Haskell
+#+begin_src elisp
+(use-package! lsp-haskell
+  :custom
+  (lsp-haskell-formatting-provider "stylish-haskell")
+  )
+#+end_src
 Add custom Terraform language server
 #+begin_src elisp
 (use-package! lsp-mode
