emacs: add Terraform header

--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -151,6 +151,7 @@ Config LSP
   (lsp-enable-links nil)
   )
 #+end_src
+*** Terraform
 Add custom Terraform language server
 #+begin_src elisp
 (use-package! lsp-mode
