--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -84,6 +84,27 @@ numbers are disabled. For relative line numbers, set this to `relative'.
       #'kill-compilation)
 #+end_src
 
+#+begin_src elisp
+(defun open-project-git (&optional arg)
+  "Switch to a project we have visited before.
+Invokes the command referenced by `projectile-switch-project-action' on switch.
+With a prefix ARG invokes `projectile-commander' instead of
+`projectile-switch-project-action.'"
+  (interactive "P")
+  (let ((projects (projectile-relevant-known-projects)))
+    (if projects
+        (projectile-completing-read
+         "Switch to project: " projects
+         :action (lambda (project)
+                   (magit-status project)))
+      (user-error "There are no known projects"))))
+
+(map! :leader
+      :desc "Magit status at project"
+      :n "g p"
+      #'open-project-git)
+#+end_src
+
 * Packages
 Add external packages
 #+begin_src elisp :tangle packages.el
