--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -91,7 +91,7 @@ numbers are disabled. For relative line numbers, set this to `relative'.
       #'comment-line)
 #+end_src
 
-#+begin_srdoomc emacs-lisp
+#+begin_src emacs-lisp
 (map! :desc "Use evil scroll up"
       :n "C-u"
       #'evil-scroll-up)
