--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -144,6 +144,16 @@ Add external packages
 (package! gitconfig)       ; Gitconfig
 (package! dockerfile-mode) ; Docker files
 (package! lsp-haskell)     ; Haskell LSP
+
+; KMonad syntax highlighting
+(package! kbd-mode
+  :recipe (:host github
+           :repo "kmonad/kbd-mode"))
+
+; Systemd syntax highlighting
+(package! systemd
+  :recipe (:host github
+           :repo "holomorph/systemd-mode"))
 #+end_src
 
 ** Org
@@ -163,8 +173,9 @@ change `org-directory'. It must be set before org loads!
 #+begin_src emacs-lisp
 (use-package! treemacs
   :init
-  (setq treemacs-width 45               ; A little bit wider
-        +treemacs-git-mode 'extended))  ; What has changed?
+  (setq treemacs-width    45            ; A little bit wider
+        treemacs-position 'left
+        treemacs-git-mode 'deferred))   ; What has changed?
 #+end_src
 *** Keybinds
 I would like to be able to access the treemacs window like in Spacemacs
@@ -188,6 +199,10 @@ Config LSP
   (custom-set lsp-enable-links nil))
 #+end_src
 
+#+begin_src elisp
+(after! lsp
+  (setq lsp-enable-snippet nil))
+#+end_src
 *** Haskell
 #+begin_src elisp
 (use-package! lsp-haskell
