emacs: use better gruvbox theme

--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -63,7 +63,7 @@ Show battery percentage in mode line if on a laptop
 Set the default theme.
 To try out the options run ~consult-theme~ (SPC h t)
 #+begin_src emacs-lisp
-(setq doom-theme 'doom-gruvbox)
+(setq doom-theme 'gruvbox)
 #+end_src
 ** Frame
 Start every frame maximized
@@ -144,6 +144,7 @@ Add external packages
 (package! gitconfig)       ; Gitconfig
 (package! dockerfile-mode) ; Docker files
 (package! lsp-haskell)     ; Haskell LSP
+(package! gruvbox-theme)   ; Gruvbox Theme
 
 ; KMonad syntax highlighting
 (package! kbd-mode
